--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.6.0",
+    "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
